amqp a vide pour reload a la volée (pour la suite s’inspirer depuis freq.erl

--- a/priv/index.html
+++ b/priv/index.html
@@ -15,7 +15,7 @@
 </style>
 
 </head>
-<body><p><a href="#nav-menu">Menu</a></p>
+<body><p><a href="http://mail-testing.com"><= Mail-testing </a></p>
 
 
 
