modif. majeures pour passage en HTTPS

--- a/priv/home.html
+++ b/priv/home.html
@@ -15,7 +15,7 @@
 </style>
 
 </head>
-<body><p><a href="http://mail-testing.com"><= Mail-testing </a></p>
+<body><p><a href="https://mail-testing.com"><= Mail-testing </a></p>
 
 
 
