--- a/priv/404.html
+++ b/priv/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <link rel="alternate" type="application/rss+xml" href="http://mail-testing.com/index.xml" title="Mail-testing" />
+    <link rel="alternate" type="application/rss+xml" href="https://mail-testing.com/index.xml" title="Mail-testing" />
     <title>Mail-testing</title>
     <style type="text/css">
      body {
@@ -34,7 +34,7 @@
     </ul>
 </div>
 
-  <h1 style="text-align:center">URL not found</h1>
+  <h1 style="text-align:center">Pas d'email reçu</h1>
 		
   <div> <div style="text-align:center"></div>
 <div style="text-align:center" id="status"></div>
